feat: Add TokenUsage and AgentAiConfig models for token management and AI configuration
- Introduced TokenUsage record to encapsulate prompt, completion, and total token counts with normalization logic.
- Created AgentAiConfig record to manage AI provider configurations, including merging and property handling.
- Implemented methods for converting AgentAiConfig to ModelOptions and for checking if configurations are empty.

test: Add unit tests for AuditConversationListProcessor and AuditConversationUsageProcessor

- Developed tests for AuditConversationListProcessor to verify AI resolution in conversation lists.
- Created tests for AuditConversationUsageProcessor to ensure correct usage totals and breakdowns for conversations.

test: Implement McpToolDiscoveryResolverTest for tool schema overrides

- Added tests to validate that concrete tool schema overrides are applied correctly during tool discovery.
- Ensured that explicit overrides are retained when the same tool name is discovered later.

feat: Introduce ModelCostEstimator for cost estimation based on token usage

- Added ModelCostEstimator class to calculate costs based on token usage and provider rates.
- Implemented methods for looking up rates and estimating costs for prompt and completion tokens.

feat: Implement OpenAiPromptCacheSupport for caching prompt settings

- Created OpenAiPromptCacheSupport to manage prompt caching settings, including key and retention policies.
- Integrated caching logic into OpenAiSdkResponsesGateway for enhanced performance.

feat: Develop OpenAiResponsesDispatcherGateway for response handling

- Introduced OpenAiResponsesDispatcherGateway to route requests to appropriate response gateways based on API mode.
- Implemented logic to differentiate between SDK and real-time response handling.

test: Add OpenAiSdkResponsesGatewayTest for response generation validation

- Created tests for OpenAiSdkResponsesGateway to verify prompt cache integration and response usage mapping.
- En